--- a/debian/control.in
+++ b/debian/control.in
@@ -13,7 +13,7 @@ XSBC-Pexip-Original-Maintainer: Theodore Y. Ts'o <tytso@mit.edu>
 Build-Depends: gettext, texinfo, pkg-config, DIETLIBC_DEFINES gcc-multilib [mips mipsel], debhelper (>= 7.0), UTIL_LINUX_NG_DEFINES m4
 Standards-Version: 3.9.5
 Homepage: http://e2fsprogs.sourceforge.net
-XS-Pexip-Upstream: http://ftp.debian.org/debian/ jessie
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ stretch
 
 ifdef(`E2FSCK_STATIC',``
 Package: e2fsck-static
